bug fix mobile overflow pricetracker

--- a/src/Routes/Private/PriceTracker/pricetracker.css
+++ b/src/Routes/Private/PriceTracker/pricetracker.css
@@ -6,6 +6,9 @@
 
     .pricetracker-fullpage-wrapper{
         height: 100% !important;
+        
+    }
+    .website{
         overflow-x: hidden;
     }
     .pricetracker-fullpage{
